// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Channel > should render a LoadingIndicator if it is loading 1`] = `
<DocumentFragment>
  <span
    data-testid="notification-announcer"
    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      role="status"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      role="alert"
    />
  </span>
  <div
    class="str-chat messaging light str-chat__channel"
    id="str-chat__channel"
  >
    <div>
      Loading channel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Channel > should render default loading indicator if channels query is in progress 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  >
    <div>
      Loading channel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Channel > should render empty channel container if channel does not have cid and EmptyPlaceholder is null 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  />
</DocumentFragment>
`;

exports[`Channel > should render empty channel container if channels query failed 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  />
</DocumentFragment>
`;
